# _froggi

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  quick_build.sh
engine/: CMakeLists.txt
engine/api/: pond_interface.h
engine/core/: animation_system.cpp  animation_system.h  collision_system.cpp  collision_system.h  debug_renderer.h  engine.cpp  input.cpp  input_handler.h  jolt_debug_renderer.cpp  jolt_debug_renderer.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h
engine/shaders/: blit.wgsl  debug.wgsl  outline_compose.wgsl  shader.wgsl  silhouette.wgsl
games/sample/: CMakeLists.txt
games/sample/scripts/: main.cpp  sample.cpp  sample.h
games/sample/scripts/components/: cube_controller.cpp  cube_controller.h
games/sample/scripts/scenes/: cubeworld.cpp  cubeworld.h
